--- a/templates/menu/home.html
+++ b/templates/menu/home.html
@@ -3,5 +3,12 @@
 {% block content %}
     <div align="center">
         <h1>Home-page</h1>
+        <div class="col col-5 col-sm-5 col-md-4 col-lg-5 col-xs-4 box-gray">
+            <br>
+            <a type="button" c type="submit" class="btn btn-warning btn-block" href="#">
+                <i class="fas fa-file-csv"></i> Carregar arquivo
+            </a>
+            <br>
+        </div>
     </div>
 {% endblock %}
