--- a/templates/menu/home.html
+++ b/templates/menu/home.html
@@ -2,10 +2,11 @@
 
 {% block content %}
     <div align="center">
-        <h1>Home-page</h1>
+        <br>
+        <h3>Home-page</h3>
         <div class="col col-5 col-sm-5 col-md-4 col-lg-5 col-xs-4 box-gray">
             <br>
-            <a type="button" c type="submit" class="btn btn-warning btn-block" href="#">
+            <a type="button" c type="submit" class="btn btn-warning btn-block" href="/upload">
                 <i class="fas fa-file-csv"></i> Carregar arquivo
             </a>
             <br>
