--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,3 @@
 .box-gray {
-    background-image: linear-gradient(to bottom right, #888888, #AAAAAA );
+    background-image: linear-gradient(to bottom right, #CCCCCC, #DDDDDD );
 }
