--- a/templates/menu/home.html
+++ b/templates/menu/home.html
@@ -10,6 +10,10 @@
                 <i class="fas fa-file-csv"></i> Carregar arquivo
             </a>
             <br>
+            <a type="button" c type="submit" class="btn btn-warning btn-block" href="/athlete/list">
+                <i class="fas fa-list"></i> Listar atletas
+            </a>
+            <br>
         </div>
     </div>
 {% endblock %}
