--- a/templates/athlete/list.html
+++ b/templates/athlete/list.html
@@ -6,6 +6,10 @@
         <h3>Lista de atletas</h3>
         <div class="col col-7 col-sm-7 col-md-4 col-lg-7 col-xs-4 box-gray">
             <br>
+            <a type="button"  type="submit" class="btn btn-warning btn-block" href="/athlete/filter">
+                <i class="fas fa-filter"></i> Filtrar lista
+            </a>
+            <br><br>
             <table class="table table-striped table-dark">
                 <thead>
                     <tr>
@@ -36,7 +40,7 @@
                                     {{item.team.noc}}
                                 </td>
                                 <td>
-                                    <a type="button" c type="submit" class="btn btn-warning" href="#">
+                                    <a type="button" type="submit" class="btn btn-warning" href="#">
                                         <i class="fas fa-eye"></i>
                                     </a>
                                 </td>
