--- a/templates/athlete/filter.html
+++ b/templates/athlete/filter.html
@@ -4,34 +4,110 @@
     <div align="center">
         <br>
         <h3>Lista de atletas</h3>
-        <div class="col col-7 col-sm-7 col-md-4 col-lg-7 col-xs-4 box-gray">
+        <div class="col col-5 col-sm-5 col-md-4 col-lg-5 col-xs-4 box-gray">
+            <p>
+                <i class="fas fa-exclamation"></i> Cuidado ao utilizar mais de um filtro filtros
+            </p>
             <br>
-            <table class="table table-striped table-dark">
-                <form action="submit" method="POST"> {% csrf_token %}
-                    <label>Nome: </label>
-                    <input type="text" name="name" maxlength="60" size="40" /><br><br>
-                    <label>Idade: </label>
-                    <input type="number" name="age" value="20" min="18" max="60" />
-                    <label>Altura: </label>
-                    <input type="number" name="height" value="170" min="50" max="400" />
-                    <label>Peso: </label>
-                    <input type="number" name="weight" value="70" min="50" max="200" /><br><br>
-                    <select class="form-control" name="sex" value='0'>
-                        <option value="M"> Masculino </option>
-                        <option value="F"> Feminino </option>
-                    </select><br>
-                    <select class="form-control" name="team" value='0'>
-                        <option value=0> Selecionar a equipe </option>
-                        {% for item in team %}
-                            <option value={{ item.id }}> Time: {{ item.noc }} Pais: {{ item.name }} </option>
-                        {% endfor %}
-                    </select>
-                    <br><br>
-                    <button class="btn btn-secondary btn-lg btn-block" type="submit">
-                        <i class="fas fa-filter"></i> Filtrar
-                    </button>
-                </form>
-            </table>
+            <form action="submit" method="POST"> {% csrf_token %}
+                <div class="form-row">
+                    <div class="form-group">
+                        <label>Nome: </label>
+                        <input type="text" name="name" maxlength="60" size="60" />
+                    </div>
+                </div>
+                <div class="form-row">
+                    <div class="form-group col-md-3">
+                        <label>Idade: </label>
+                        <input type="number" name="age" min="18" max="60" />
+                    </div>
+                    <div class="form-group col-md-3">
+                        <label>Altura: </label>
+                        <input type="number" name="height" min="50" max="400" />
+                    </div>
+                    <div class="form-group col-md-3">
+                        <label>Peso: </label>
+                        <input type="number" name="weight" min="50" max="200" />
+                    </div>
+                    <div class="form-group col-md-3">
+                        <select class="form-control" name="sex" value='0'>
+                            <option value="M"> Masculino </option>
+                            <option value="F"> Feminino </option>
+                        </select>
+                    </div>
+                </div>
+                <div class="form-row">
+                    <div class="form-group col-md-6">
+                        <select class="form-control" name="team" value='0'>
+                            <option value=0> Filtrar por equipe </option>
+                            {% for item in team %}
+                                <option value={{ item.id }}> Time: {{ item.noc }} Pais: {{ item.name }} </option>
+                            {% endfor %}
+                        </select>
+                    </div>
+                    <div class="form-group col-md-6">
+                        <select class="form-control" name="game" value='0'>
+                            <option value=0> Filtrar por jogos </option>
+                            {% for item in game %}
+                                <option value={{ item.id }}> {{ item.year }} {{ item.season.name }} </option>
+                            {% endfor %}
+                        </select>
+                    </div>
+                </div>
+                <div class="form-row">
+                    <div class="form-group col-md-6">
+                        <select class="form-control" name="event" value='0'>
+                            <option value=0>  Filtrar por evento </option>
+                            {% for item in event %}
+                                <option value={{ item.id }}> {{ item.name }} </option>
+                            {% endfor %}
+                        </select>
+                    </div>
+                    <div class="form-group col-md-6">
+                        <select class="form-control" name="sport" value='0'>
+                            <option value=0>  Filtrar por esporte </option>
+                            {% for item in sport %}
+                                <option value={{ item.id }}> {{ item.name }} </option>
+                            {% endfor %}
+                        </select>
+                    </div>
+                </div>
+                <div class="form-row">
+                    <div class="form-group col-md-6">
+                        <select class="form-control" name="city" value='0'>
+                            <option value=0>  Filtrar por cidade da competição </option>
+                            {% for item in city %}
+                                <option value={{ item.id }}> {{ item.name }} </option>
+                            {% endfor %}
+                        </select>
+                    </div>
+                </div>
+                <div class="form-row">
+                    <div class="form-group">
+                        <label>Filtrar por medalhas:</label>
+                    </div>
+                </div>
+                <div class="form-row">
+                    <div class="form-group">
+                        <div class="form-check form-check-inline">
+                            <input class="form-check-input" type="checkbox" id="gold" value="Gold">
+                            <label class="form-check-label" for="gold">Ouro</label>
+                        </div>
+                        <div class="form-check form-check-inline">
+                            <input class="form-check-input" type="checkbox" id="silver" value="Silver">
+                            <label class="form-check-label" for="silver">Prata</label>
+                        </div>
+                         <div class="form-check form-check-inline">
+                            <input class="form-check-input" type="checkbox" id="bronze" value="Bronze">
+                            <label class="form-check-label" for="bronze">Bronze</label>
+                        </div>
+                    </div>
+                </div>
+                <br>
+                <button class="btn btn-secondary btn-lg btn-block" type="submit">
+                    <i class="fas fa-filter"></i> Filtrar
+                </button>
+            </form>
             <br>
         </div>
     </div>
