--- a/templates/athlete/filter.html
+++ b/templates/athlete/filter.html
@@ -30,7 +30,8 @@
                         <input type="number" name="weight" min="50" max="200" />
                     </div>
                     <div class="form-group col-md-3">
-                        <select class="form-control" name="sex" value='0'>
+                        <select class="form-control" name="sex" value='A'>
+                            <option value="A"> Ambos </option>
                             <option value="M"> Masculino </option>
                             <option value="F"> Feminino </option>
                         </select>
@@ -38,7 +39,7 @@
                 </div>
                 <div class="form-row">
                     <div class="form-group col-md-6">
-                        <select class="form-control" name="team" value='0'>
+                        <select class="form-control" name="team_id" value='0'>
                             <option value=0> Filtrar por equipe </option>
                             {% for item in team %}
                                 <option value={{ item.id }}> Time: {{ item.noc }} Pais: {{ item.name }} </option>
@@ -46,7 +47,7 @@
                         </select>
                     </div>
                     <div class="form-group col-md-6">
-                        <select class="form-control" name="game" value='0'>
+                        <select class="form-control" name="game_id" value='0'>
                             <option value=0> Filtrar por jogos </option>
                             {% for item in game %}
                                 <option value={{ item.id }}> {{ item.year }} {{ item.season.name }} </option>
@@ -56,7 +57,7 @@
                 </div>
                 <div class="form-row">
                     <div class="form-group col-md-6">
-                        <select class="form-control" name="event" value='0'>
+                        <select class="form-control" name="event_id" value='0'>
                             <option value=0>  Filtrar por evento </option>
                             {% for item in event %}
                                 <option value={{ item.id }}> {{ item.name }} </option>
@@ -64,7 +65,7 @@
                         </select>
                     </div>
                     <div class="form-group col-md-6">
-                        <select class="form-control" name="sport" value='0'>
+                        <select class="form-control" name="sport_id" value='0'>
                             <option value=0>  Filtrar por esporte </option>
                             {% for item in sport %}
                                 <option value={{ item.id }}> {{ item.name }} </option>
@@ -74,7 +75,7 @@
                 </div>
                 <div class="form-row">
                     <div class="form-group col-md-6">
-                        <select class="form-control" name="city" value='0'>
+                        <select class="form-control" name="city_id" value='0'>
                             <option value=0>  Filtrar por cidade da competição </option>
                             {% for item in city %}
                                 <option value={{ item.id }}> {{ item.name }} </option>
@@ -90,15 +91,15 @@
                 <div class="form-row">
                     <div class="form-group">
                         <div class="form-check form-check-inline">
-                            <input class="form-check-input" type="checkbox" id="gold" value="Gold">
+                            <input class="form-check-input" type="checkbox" id="gold" name="gold" value="Gold">
                             <label class="form-check-label" for="gold">Ouro</label>
                         </div>
                         <div class="form-check form-check-inline">
-                            <input class="form-check-input" type="checkbox" id="silver" value="Silver">
+                            <input class="form-check-input" type="checkbox" id="silver" name="silver"  value="Silver">
                             <label class="form-check-label" for="silver">Prata</label>
                         </div>
                          <div class="form-check form-check-inline">
-                            <input class="form-check-input" type="checkbox" id="bronze" value="Bronze">
+                            <input class="form-check-input" type="checkbox" id="bronze" name="bronze"  value="Bronze">
                             <label class="form-check-label" for="bronze">Bronze</label>
                         </div>
                     </div>
