Filtagem por idade

--- a/templates/athlete/filter.html
+++ b/templates/athlete/filter.html
@@ -6,7 +6,8 @@
         <h3>Lista de atletas</h3>
         <div class="col col-5 col-sm-5 col-md-4 col-lg-5 col-xs-4 box-gray">
             <p>
-                <i class="fas fa-exclamation"></i> Cuidado ao utilizar mais de um filtro filtros
+                <i class="fas fa-exclamation"></i> Cuidado ao utilizar mais de um filtro filtros<br>
+                <i class="fas fa-exclamation"></i> Filtro por idade tras atleta que participou de algum evento com essa idade
             </p>
             <br>
             <form action="submit" method="POST"> {% csrf_token %}
