--- a/templates/athlete/filter.html
+++ b/templates/athlete/filter.html
@@ -32,7 +32,7 @@
                     </div>
                     <div class="form-group col-md-3">
                         <select class="form-control" name="sex" value='A'>
-                            <option value="A"> Ambos </option>
+                            <option value="A"> Sexo </option>
                             <option value="M"> Masculino </option>
                             <option value="F"> Feminino </option>
                         </select>
