Create criado, modifiquei algumas coisas***

--- a/templates/menu/home.html
+++ b/templates/menu/home.html
@@ -6,13 +6,16 @@
         <h3>Home-page</h3>
         <div class="col col-5 col-sm-5 col-md-4 col-lg-5 col-xs-4 box-gray">
             <br>
-            <a type="button" c type="submit" class="btn btn-warning btn-block" href="/upload">
+            <a type="button" type="submit" class="btn btn-warning btn-block" href="/upload">
                 <i class="fas fa-file-csv"></i> Carregar arquivo
             </a>
-             <a type="button"  type="submit" class="btn btn-warning btn-block" href="/athlete/filter">
+            <a type="button" type="submit" class="btn btn-warning btn-block" href="/athlete/create">
+                <i class="fas fa-user-plus"></i> Adicionar
+            </a>
+            <a type="button"  type="submit" class="btn btn-warning btn-block" href="/athlete/filter">
                 <i class="fas fa-filter"></i> Filtrar atletas
             </a>
-            <a type="button" c type="submit" class="btn btn-warning btn-block" href="/athlete/list">
+            <a type="button" type="submit" class="btn btn-warning btn-block" href="/athlete/list">
                 <i class="fas fa-list"></i> Listar todos atletas
             </a>
             <br>
