--- a/templates/athlete/create.html
+++ b/templates/athlete/create.html
@@ -10,47 +10,55 @@
                 <span style="color: red;">* Erro: {{ message }}</span><br>
             {% endfor %}
             <form action="submit" method="POST"> {% csrf_token %}
-                <div class="form-row">
-                    <div class="form-group">
-                        <label>Nome: </label>
-                        <input type="text" name="name" maxlength="60" size="60" />
+                {% if athlete == None%}
+                    <div class="form-row">
+                        <div class="form-group">
+                            <label>Nome: </label>
+                            <input type="text" name="name" maxlength="60" size="60" />
+                        </div>
                     </div>
-                </div>
-                <div class="form-row">
-                    <div class="form-group col-md-4">
-                        <label>Altura: </label>
-                        <input type="number" name="height" value="170" min="50" max="400" />
+                    <div class="form-row">
+                        <div class="form-group col-md-4">
+                            <label>Altura: </label>
+                            <input type="number" name="height" value="170" min="50" max="400" />
+                        </div>
+                        <div class="form-group col-md-4">
+                            <label>Peso: </label>
+                            <input type="number" name="weight" value="70" min="50" max="200" />
+                        </div>
+                        <div class="form-group col-md-4">
+                            <select class="form-control" name="sex" value='M'>
+                                <option value="M"> Masculino </option>
+                                <option value="F"> Feminino </option>
+                            </select>
+                        </div>
                     </div>
-                    <div class="form-group col-md-4">
-                        <label>Peso: </label>
-                        <input type="number" name="weight" value="70" min="50" max="200" />
+                    <div class="form-row">
+                        <div class="form-group col-md-6">
+                            <select class="form-control" name="team_id" value='1'>
+                                {% for item in team %}
+                                    <option value={{ item.id }}> Time: {{ item.noc }} Pais: {{ item.name }} </option>
+                                {% endfor %}
+                            </select>
+                        </div>
+                        <div class="form-group col-md-6">
+                            <select class="form-control" name="sport_id" value='1'>
+                                {% for item in sport %}
+                                    <option value={{ item.id }}> {{ item.name }} </option>
+                                {% endfor %}
+                            </select>
+                        </div>
                     </div>
-                    <div class="form-group col-md-4">
-                        <select class="form-control" name="sex" value='M'>
-                            <option value="M"> Masculino </option>
-                            <option value="F"> Feminino </option>
-                        </select>
-                    </div>
-                </div>
-                <div class="form-row">
-                    <div class="form-group col-md-6">
-                        <select class="form-control" name="team_id" value='1'>
-                            {% for item in team %}
-                                <option value={{ item.id }}> Time: {{ item.noc }} Pais: {{ item.name }} </option>
-                            {% endfor %}
-                        </select>
-                    </div>
-                    <div class="form-group col-md-6">
-                        <select class="form-control" name="sport_id" value='1'>
-                            {% for item in sport %}
-                                <option value={{ item.id }}> {{ item.name }} </option>
-                            {% endfor %}
-                        </select>
-                    </div>
-                </div>
+                {% else %}
+                    <label>Form de cadastro</label>
+                {% endif %}
                 <br>
                 <button class="btn btn-secondary btn-lg btn-block" type="submit">
-                    <i class="fas fa-user-plus"></i>Cadastrar
+                    {% if athlete == None%}
+                        <i class="fas fa-user-plus"></i> Cadastrar
+                    {% else %}
+                        <i class="fas fa-user-edit"></i> Atualizar
+                    {% endif %}
                 </button>
             </form>
             <br>
