--- a/templates/athlete/create.html
+++ b/templates/athlete/create.html
@@ -50,6 +50,7 @@
                         </div>
                     </div>
                 {% else %}
+                    <input name="id" value="{{athlete.id}}" hidden>
                     <div class="form-row">
                         <div class="form-group">
                             <label>Nome: </label>
