--- a/templates/athlete/view.html
+++ b/templates/athlete/view.html
@@ -33,7 +33,7 @@
                     </a>
                 </div>
                 <div class="form-group col-md-6">
-                    <a type="button" type="submit" class="btn btn-success btn-block" href="/athlete/upgrade/{{athlete.id}}">
+                    <a type="button" type="submit" class="btn btn-success btn-block" href="/athlete/update/{{athlete.id}}">
                         <i class="fas fa-user-edit"></i> Editar
                     </a>
                 </div>
