Salvando para mudar de branch

--- a/templates/athlete/view.html
+++ b/templates/athlete/view.html
@@ -27,12 +27,17 @@
                 </div>
             </div>
             <div class="form-row">
-                <div class="form-group col-md-6">
+                <div class="form-group col-md-4">
                     <a type="button" type="submit" class="btn btn-danger btn-block" href="/athlete/delete/{{athlete.id}}/">
                         <i class="fas fa-user-times"></i> Delete
                     </a>
                 </div>
-                <div class="form-group col-md-6">
+                <div class="form-group col-md-4">
+                    <a type="button" type="submit" class="btn btn-primary btn-block" href="#">
+                        <i class="fas fa-snowboarding"></i> Adicionar participação
+                    </a>
+                </div>
+                <div class="form-group col-md-4">
                     <a type="button" type="submit" class="btn btn-success btn-block" href="/athlete/update/{{athlete.id}}">
                         <i class="fas fa-user-edit"></i> Editar
                     </a>
