Tela de cadastro de participação

--- a/templates/athlete/create.html
+++ b/templates/athlete/create.html
@@ -60,11 +60,11 @@
                     <div class="form-row">
                         <div class="form-group col-md-4">
                             <label>Altura: </label>
-                            <input type="number" name="height" value="{{athlete.height}}" value="170" min="50" max="400" />
+                            <input type="number" name="height" value="{{athlete.height}}" min="50" max="400" />
                         </div>
                         <div class="form-group col-md-4">
                             <label>Peso: </label>
-                            <input type="number" name="weight" value="{{athlete.weight}}" value="70" min="50" max="200" />
+                            <input type="number" name="weight" value="{{athlete.weight}}" min="50" max="200" />
                         </div>
                         <div class="form-group col-md-4">
                             <select class="form-control" name="sex" value="{{athlete.sex}}">
