--- a/templates/athlete/view.html
+++ b/templates/athlete/view.html
@@ -33,7 +33,7 @@
                     </a>
                 </div>
                 <div class="form-group col-md-4">
-                    <a type="button" type="submit" class="btn btn-primary btn-block" href="#">
+                    <a type="button" type="submit" class="btn btn-primary btn-block" href="/athlete/participation/{{athlete.id}}">
                         <i class="fas fa-snowboarding"></i> Adicionar participação
                     </a>
                 </div>
