--- a/templates/athlete/participation.html
+++ b/templates/athlete/participation.html
@@ -6,7 +6,10 @@
         <h3>Adicionar participção</h3>
         <div class="col col-5 col-sm-5 col-md-4 col-lg-5 col-xs-4 box-gray">
             <br>
-            <form action="submit" method="POST"> {% csrf_token %}
+            {% for message in messages %}
+                <span style="color: red;">* Erro: {{ message }}</span><br>
+            {% endfor %}
+            <form action="/athlete/participation/submit" method="POST"> {% csrf_token %}
                 <input name="id" value="{{athlete.id}}" hidden>
                 <div class="form-row">
                     <div class="form-group col-md-6">
@@ -20,7 +23,7 @@
                 </div>
                 <div class="form-row">
                     <div class="form-group col-md-6">
-                        <select class="form-control" name="team_id" value="1">
+                        <select class="form-control" name="game_event_id" value="1">
                              {% for item in games_events %}
                                 <option value={{ item.id }}> Jogos: {{ item.game.year }} {{ item.game.season.name }}
                                     Evento: {{ item.event.name }} </option>
@@ -28,7 +31,7 @@
                         </select>
                     </div>
                     <div class="form-group col-md-6">
-                        <select class="form-control" name="team_id" value="0">
+                        <select class="form-control" name="medal_id" value="0">
                             <option value="0">Nenhuma medalha</option>
                             <option value="1">Medalha de OURO</option>
                             <option value="2">Medalha de PRATA</option>
