Tela de listagem feita

--- a/templates/menu/home.html
+++ b/templates/menu/home.html
@@ -9,14 +9,19 @@
             <a type="button" type="submit" class="btn btn-warning btn-block" href="/upload">
                 <i class="fas fa-file-csv"></i> Carregar arquivo
             </a>
+            <hr>
             <a type="button" type="submit" class="btn btn-warning btn-block" href="/athlete/create">
-                <i class="fas fa-user-plus"></i> Adicionar
+                <i class="fas fa-user-plus"></i> Adicionar atletas
             </a>
             <a type="button"  type="submit" class="btn btn-warning btn-block" href="/athlete/filter">
                 <i class="fas fa-filter"></i> Filtrar atletas
             </a>
             <a type="button" type="submit" class="btn btn-warning btn-block" href="/athlete/list">
                 <i class="fas fa-list"></i> Listar todos atletas
+            </a>
+            <hr>
+            <a type="button" type="submit" class="btn btn-warning btn-block" href="/region/list/">
+                <i class="fas fa-list"></i> Listar todos regiões
             </a>
             <br>
         </div>
