--- a/templates/athlete/filter.html
+++ b/templates/athlete/filter.html
@@ -3,7 +3,7 @@
 {% block content %}
     <div align="center">
         <br>
-        <h3>Lista de atletas</h3>
+        <h3>Filtrar de atletas</h3>
         <div class="col col-5 col-sm-5 col-md-4 col-lg-5 col-xs-4 box-gray">
             <p>
                 <i class="fas fa-exclamation"></i> Cuidado ao utilizar mais de um filtro filtros<br>
