--- a/templates/menu/home.html
+++ b/templates/menu/home.html
@@ -23,6 +23,9 @@
             <a type="button" type="submit" class="btn btn-warning btn-block" href="/region/list/">
                 <i class="fas fa-list"></i> Listar todos regiões
             </a>
+            <a type="button"  type="submit" class="btn btn-warning btn-block" href="/region/filter/">
+                <i class="fas fa-filter"></i> Filtrar atletas
+            </a>
             <br>
         </div>
     </div>
