--- a/templates/region/list.html
+++ b/templates/region/list.html
@@ -6,7 +6,7 @@
         <h3>Lista de atletas</h3>
         <div class="col col-7 col-sm-7 col-md-4 col-lg-7 col-xs-4 box-gray">
             <br>
-            <a type="button"  type="submit" class="btn btn-warning btn-block" href="#">
+            <a type="button"  type="submit" class="btn btn-warning btn-block" href="/region/filter/">
                 <i class="fas fa-filter"></i> Filtrar lista
             </a>
             <br><br>
