--- a/templates/region/filter.html
+++ b/templates/region/filter.html
@@ -25,7 +25,7 @@
                 <div class="form-row">
                     <div class="form-group col-6">
                         <label>Nota: </label>
-                        <input type="text" name="note" maxlength="100"/>
+                        <input type="text" name="notes" maxlength="100"/>
                     </div>
                 </div>
                 <br>
