--- a/templates/region/list.html
+++ b/templates/region/list.html
@@ -32,7 +32,7 @@
                                     {{item.notes}}
                                 </td>
                                 <td>
-                                    <a type="button" type="submit" class="btn btn-warning" href="#">
+                                    <a type="button" type="submit" class="btn btn-warning" href="/region/view/?id={{item.id}}">
                                         <i class="fas fa-eye"></i>
                                     </a>
                                 </td>
