--- a/templates/menu/home.html
+++ b/templates/menu/home.html
@@ -20,11 +20,14 @@
                 <i class="fas fa-list"></i> Listar todos atletas
             </a>
             <hr>
-            <a type="button" type="submit" class="btn btn-warning btn-block" href="/region/list/">
-                <i class="fas fa-list"></i> Listar todos regiões
+            <a type="button" type="submit" class="btn btn-warning btn-block" href="/region/create">
+                <i class="fas fa-map-marked"></i> Adicionar país
             </a>
             <a type="button"  type="submit" class="btn btn-warning btn-block" href="/region/filter/">
                 <i class="fas fa-filter"></i> Filtrar atletas
+            </a>
+            <a type="button" type="submit" class="btn btn-warning btn-block" href="/region/list/">
+                <i class="fas fa-list"></i> Listar todos regiões
             </a>
             <br>
         </div>
