Etapa de criar finalizada, iniciar melhorias

--- a/templates/menu/home.html
+++ b/templates/menu/home.html
@@ -24,7 +24,7 @@
                 <i class="fas fa-map-marked"></i> Adicionar país
             </a>
             <a type="button"  type="submit" class="btn btn-warning btn-block" href="/region/filter/">
-                <i class="fas fa-filter"></i> Filtrar atletas
+                <i class="fas fa-filter"></i> Filtrar regiões
             </a>
             <a type="button" type="submit" class="btn btn-warning btn-block" href="/region/list/">
                 <i class="fas fa-list"></i> Listar todos regiões
