--- a/templates/region/create.html
+++ b/templates/region/create.html
@@ -28,7 +28,7 @@
                         </div>
                     </div>
                 {% else %}
-                    <input name="id" value="{{athlete.id}}" hidden>
+                    <input name="id" value="{{region.id}}" hidden>
                     <div class="form-row">
                         <div class="form-group col-6">
                             <label>NOC: </label>
