--- a/templates/region/view.html
+++ b/templates/region/view.html
@@ -24,12 +24,12 @@
             </div>
             <div class="form-row">
                 <div class="form-group col-md-6">
-                    <a type="button" type="submit" class="btn btn-danger btn-block" href="#}}/">
+                    <a type="button" type="submit" class="btn btn-danger btn-block" href="/region/delete/{{region.id}}">
                         <i class="fas fa-trash-alt"></i> Delete
                     </a>
                 </div>
                 <div class="form-group col-md-6">
-                    <a type="button" type="submit" class="btn btn-success btn-block" href="#}">
+                    <a type="button" type="submit" class="btn btn-success btn-block" href="/region/update/{{region.id}}">
                         <i class="fas fa-edit"></i> Editar
                     </a>
                 </div>
