--- a/templates/region/filter.html
+++ b/templates/region/filter.html
@@ -6,7 +6,7 @@
         <h3>Filtrar regiões</h3>
         <div class="col col-5 col-sm-5 col-md-4 col-lg-5 col-xs-4 box-gray">
             <p>
-                <i class="fas fa-exclamation"></i> Cuidado ao utilizar mais de um filtro filtros<br>
+                <i class="fas fa-exclamation"></i> Cuidado ao utilizar mais de um filtro<br>
             </p>
             {% for message in messages %}
                 <span style="color: red;">* Erro: {{ message }}</span><br>
